--- a/template/script/gemfile
+++ b/template/script/gemfile
@@ -1,16 +1,11 @@
 #!/usr/bin/env ruby
 
-if !File.file?('Gemfile.erb')
-  puts "Not using Gemfile.erb, exiting."
+require 'rubygems'
+require 'penchant'
+
+if Penchant::Gemfile.do_full_env_switch!(ARGV[0])
+  puts "Gemfile switched to #{ARGV[0]}"
+else
   exit 0
 end
-
-require 'erb'
-
-env = ARGV[0]
-
-File.open('Gemfile', 'w') { |fh| fh.print ERB.new(File.read('Gemfile.erb')).result(binding) }
-system %{bundle}
-
-puts "Gemfile switched to #{env}"
 
