--- a/script/gemfile
+++ b/script/gemfile
@@ -4,6 +4,7 @@ require 'rubygems'
 require 'penchant'
 
 if Penchant::Gemfile.do_full_env_switch!(ARGV[0])
+  system %{bundle}
   puts "Gemfile switched to #{ARGV[0]}"
 else
   exit 0
