--- a/script/gemfile
+++ b/script/gemfile
@@ -3,9 +3,9 @@
 require 'rubygems'
 require 'penchant'
 
-if Penchant::Gemfile.do_full_env_switch!(ARGV[0], true)
+if Penchant::Gemfile.do_full_env_switch!(ARGV[0])
   system %{bundle}
-  puts "Gemfile switched to #{ARGV[0]} in deployment mode"
+  puts "Gemfile switched to #{ARGV[0]}"
 else
   exit 0
 end
